Fixed gap in password field

--- a/css/style.css
+++ b/css/style.css
@@ -357,7 +357,7 @@ a.active {
 #signUp .text form .column {
   display: flex;
   flex-direction: column;
-  gap: 8px;
+  gap: 16px;
 }
 
 .fa-eye-slash,
